--- a/Taskvalorpay/app/build.gradle
+++ b/Taskvalorpay/app/build.gradle
@@ -56,7 +56,10 @@ dependencies {
 
     implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
     kapt "androidx.lifecycle:lifecycle-common-java8:$lifecycle_version"
+    implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
 
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
 
 }
 kapt {
